--- a/java/dropwizard/gradle/wrapper/gradle-wrapper.properties
+++ b/java/dropwizard/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Thu May 21 17:26:28 BST 2015
+#Wed May 03 19:16:51 CEST 2017
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-2.2-all.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-3.5-bin.zip
